k8s/manifests/ingress-test/test-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-nginx
  namespace: default
spec:
  selector:
    app: test-nginx
  ports:
    - port: 80
      targetPort: 80
